--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,5 @@
 *.unity3d filter=lfs diff=lfs merge=lfs -text
 *ArtifactDB filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.br filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
