--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/stell/OneDrive/Stella/GATech - PhD/Play&LearnLab/Builds/EscapeOrDie;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/solyaneberge/Unity/Escape_or_die_general/EscapeOrDie/EscapeOrDie_itchio/EscapeOrDie_itchio_v2;/Users/solyaneberge/Unity/EscapeOrDie/EscapeOrDie_itchio;C:/Users/stell/OneDrive/Stella/GATech - PhD/Play&LearnLab/Builds/EscapeOrDie;;;;;;;\"}"
             }
         ]
     }
